splash screen spacing and mobile layout issue

--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@
     margin-top: 0rem;
   }
     #enterBtn {
-    margin-top: -2.95rem;  /* or even 0rem if you want it really tight */
+    margin-top: -4rem;  /* or even 0rem if you want it really tight */
   }
 
 }
